--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 
   <div class="OnOff">
-    <h1 id="main-heading" class="animate__animated animate__bounce">Todo App</h1>
+    <h1 id="main-heading" class="animate__animated animate__bounce">Todo App for Sweetie</h1>
    
     <!-- <button id="button-DarkMode">clickme</button> -->
   </div>
   
   <div class="grid-container">
-    <input id="todo-input" type="text" placeholder="Enter Todo here">
+    <input id="todo-input" type="text" placeholder="Enter Todo Sweetie...">
     <input id="todo-date" type="date">
     <button class='btn-todo' onclick="addTodo();">Add</button>
   </div>
