--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="OnOff">
-    <h1 id="main-heading" class="animate__animated animate__bounce">Todo App for Sweetie</h1>
+    <h1 id="main-heading" class="animate__animated animate__bounce">Todo App by VIK</h1>
    
     <!-- <button id="button-DarkMode">clickme</button> -->
   </div>
